# pivx-wallet-kit

./: .gitignore  AUDIT.md  Cargo.toml  DESIGN-v0.2.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: sign.rs
examples/web-wallet/: README.md  app.js  index.html
src/: amount.rs  checkpoints.rs  fees.rs  keys.rs  lib.rs  messages.rs  params.rs  sync.rs  wallet.rs  wasm.rs
src/sapling/: builder.rs  keys.rs  mod.rs  notes.rs  prover.rs  sync.rs  tree.rs  tx.rs
src/simd/: hex.rs
src/transparent/: builder.rs  mod.rs  tx.rs  utxo.rs
tests/: checkpoint_size.rs  integration.rs
tests/fixtures/: tx_shield.hex  tx_transparent.hex
