[package]
name = "pivx-wallet-kit"
version = "0.1.0"
edition = "2021"
description = "PIVX Wallet Kit — pure-Rust wallet primitives with Sapling shield support, WASM-ready"
repository = "https://github.com/PIVX-Labs/pivx-wallet-kit"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "sign"
path = "examples/sign.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# PIVX Sapling cryptographic libraries (librustpivx fork of zcash libs)
sapling = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
pivx_primitives = { package = "zcash_primitives", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", default-features = false, features = ["transparent-inputs", "circuits", "std", "non-standard-fees"] }
pivx_client_backend = { package = "zcash_client_backend", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
pivx_protocol = { package = "zcash_protocol", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", default-features = false }
zcash_keys = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", features = ["unstable"] }
zcash_transparent = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", features = ["groth16"] }
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.7"

# Audited cryptographic primitives
secp256k1 = { version = "0.29", features = ["global-context", "recovery"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
bip32 = "0.5"
bip39 = "2"
bs58 = "0.5.1"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
zeroize = { version = "1.8", features = ["derive"] }

# Entropy (js feature required for WASM)
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["std"] }

# WASM bindings
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
default = []
multicore = ["wasm-bindgen-rayon"]

[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "c684e9185a0449efb00428f807d3bf286b5dae03" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "eae848c5c14d9c795d000dd9f4c4762d1aee7ee1" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
