# NOTE: Cargo.lock is intentionally committed despite this being a
# library crate. `core2 = 0.3.3` is yanked from crates.io and is a
# transitive dep of librustpivx — building from a fresh resolver
# without the lock would fail. Drop the lock once librustpivx
# releases a build that doesn't pull yanked core2 (or once we patch
# it via [patch.crates-io] to a non-yanked source).
[package]
name = "pivx-wallet-kit"
version = "0.1.0"
edition = "2021"
description = "PIVX Wallet Kit — pure-Rust wallet primitives with Sapling shield support, WASM-ready"
repository = "https://github.com/PIVX-Labs/pivx-wallet-kit"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "sign"
path = "examples/sign.rs"

[package.metadata.wasm-pack.profile.release]
# wasm-opt strips ~half the wasm binary size for the cost of a few
# extra seconds at build time. Keep on for release builds; consumers
# building from source with `cargo build` aren't affected.
# `--enable-bulk-memory` is required because rustc emits bulk-memory
# instructions (memory.copy) on stable since 2024.
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-reference-types",
]

[dependencies]
# PIVX Sapling cryptographic libraries (librustpivx fork of zcash libs)
sapling = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
pivx_primitives = { package = "zcash_primitives", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", default-features = false, features = ["transparent-inputs", "circuits", "std", "non-standard-fees"] }
pivx_client_backend = { package = "zcash_client_backend", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
pivx_protocol = { package = "zcash_protocol", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", default-features = false }
zcash_keys = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", features = ["unstable"] }
zcash_transparent = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", features = ["groth16"] }
zcash_note_encryption = "0.4"
# Direct dep is unavoidable — `pivx_primitives::merkle_tree::read_commitment_tree`
# returns `CommitmentTree` and `IncrementalWitness` from this crate, but
# pivx_primitives doesn't re-export the types. Cargo's resolver dedupes
# to a single instance as long as our requirement and pivx_primitives'
# (currently 0.7.1, default-features = false) overlap on the same minor.
incrementalmerkletree = "0.7"

# Audited cryptographic primitives
secp256k1 = { version = "0.29", features = ["global-context", "recovery"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
bip32 = "0.5"
bip39 = "2"
bs58 = "0.5.1"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
zeroize = { version = "1.8", features = ["derive"] }

# Entropy (js feature required for WASM)
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["std"] }

# WASM bindings
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
wasm-bindgen-rayon = { version = "1.2", optional = true }
# tsify generates TypeScript types alongside wasm-bindgen exports.
# `default-features = false` keeps it inert on native builds; the
# `js` feature wires up to wasm-bindgen on the wasm32 target.
tsify = { version = "0.4", default-features = false, features = ["js"] }

[features]
default = []
multicore = ["wasm-bindgen-rayon"]

# [patch.crates-io] forces transitive deps to specific git revisions.
# - `orchard` is load-bearing: librustpivx pulls Orchard transitively
#   (even though PIVX doesn't use it) and the version on crates.io
#   doesn't compile against the rebased librustzcash branch we use.
#   Don't drop this patch unless / until librustpivx stops pulling
#   orchard.
# - `redjubjub` and `bellman` are pinned for the same reason — keeping
#   their versions in lockstep with librustpivx's expectations.
[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "c684e9185a0449efb00428f807d3bf286b5dae03" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "eae848c5c14d9c795d000dd9f4c4762d1aee7ee1" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
